--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -52,6 +53,7 @@ requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
+soupsieve==2.5
 SpeechRecognition==3.10.4
 SQLAlchemy==2.0.30
 starlette==0.37.2
