--- a/requirements.txt
+++ b/requirements.txt
@@ -39,19 +39,23 @@ numpy==1.26.4
 openai==1.34.0
 orjson==3.10.4
 packaging==23.2
+pandas==2.2.2
 pillow==10.3.0
 proglog==0.1.10
 pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
 PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytube==15.0.0
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 SpeechRecognition==3.10.4
@@ -61,6 +65,7 @@ tenacity==8.3.0
 tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.2
+tzdata==2024.1
 ujson==5.10.0
 urllib3==2.2.1
 uvicorn==0.30.1
