--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
 beautifulsoup4==4.12.3
-bs4
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -40,7 +39,7 @@ numpy
 openai==1.34.0
 orjson==3.10.4
 packaging==23.2
-pandas
+pandas==2.2.2
 pillow==10.3.0
 proglog==0.1.10
 pydantic==2.7.4
