--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.4.0
+anyio
 attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.6.2
@@ -12,7 +12,7 @@ decorator==4.4.2
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
-fastapi==0.111.0
+fastapi==0.105.0
 fastapi-cli==0.0.4
 frozenlist==1.4.1
 greenlet==3.0.3
@@ -60,7 +60,7 @@ sniffio==1.3.1
 soupsieve==2.5
 SpeechRecognition==3.10.4
 SQLAlchemy==2.0.30
-starlette==0.37.2
+starlette
 tenacity==8.3.0
 tqdm==4.66.4
 typer==0.12.3
