--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,76 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.7.0
+aiohttp
+aiosignal
+annotated-types
 anyio
-attrs==23.2.0
-beautifulsoup4==4.12.3
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-decorator==4.4.2
-distro==1.9.0
-dnspython==2.6.1
-email_validator==2.1.1
+attrs
+beautifulsoup4
+certifi
+charset-normalizer
+click
+colorama
+decorator
+distro
+dnspython
+email_validator
 fastapi==0.105.0
-fastapi-cli==0.0.4
-frozenlist==1.4.1
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.7
-imageio==2.34.1
-imageio-ffmpeg==0.5.1
-Jinja2==3.1.4
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.2.3
-langchain-core==0.2.5
-langchain-text-splitters==0.2.1
-langsmith==0.1.77
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
+fastapi-cli
+frozenlist
+greenlet
+h11
+httpcore
+httptools
+httpx
+idna
+imageio
+imageio-ffmpeg
+Jinja2
+jsonpatch
+jsonpointer
+langchain
+langchain-core
+langchain-text-splitters
+langsmith
+markdown-it-py
+MarkupSafe
+mdurl
 moviepy==1.0.3
-multidict==6.0.5
+multidict
 numpy
-openai==1.34.0
-orjson==3.10.4
-packaging==23.2
-pandas==2.2.2
-pillow==10.3.0
-proglog==0.1.10
-pydantic==2.7.4
-pydantic_core==2.18.4
-Pygments==2.18.0
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytube==15.0.0
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.32.3
-rich==13.7.1
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
-SpeechRecognition==3.10.4
-SQLAlchemy==2.0.30
+openai
+orjson
+packaging
+pandas
+pillow
+proglog
+pydantic
+pydantic_core
+Pygments
+PyPDF2
+python-dateutil
+python-dotenv
+python-multipart
+pytube
+pytz
+PyYAML
+requests
+rich
+shellingham
+six
+sniffio
+soupsieve
+SpeechRecognition
+SQLAlchemy
 starlette
-tenacity==8.3.0
-tqdm==4.66.4
-typer==0.12.3
-typing_extensions==4.12.2
-tzdata==2024.1
-ujson==5.10.0
-urllib3==2.2.1
-uvicorn==0.30.1
-watchfiles==0.22.0
-websockets==12.0
-yarl==1.9.4
+tenacity
+tqdm
+typer
+typing_extensions
+tzdata
+ujson
+urllib3
+uvicorn
+watchfiles
+websockets
+yarl
 pycryptodome
 google-genai
